--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Simple Note is a simple app created to help organize tasks and todos"
+      content="Simple Post-it is a simple app created to help organize tasks and todos"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Simple Note</title>
+    <title>Simple Post-it</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
